--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,12 +6,14 @@
     <string name="hint_name">Your Name</string>
     <string name="title_activity_order">OrderActivity</string>
 
-    <string name="hbd_text">Happy Birthday Sist!</string>
-    <string name="from">From, Bro </string>
-    <string name="open">Open</string>
+    <string name="hbd_text">Application Launcher</string>
+    <string name="from">Good Luck :) </string>
+    <string name="resto">Resto Apps</string>
+    <string name="education">Education Apps</string>
 
 
     <string name="about">
         Lorem ipsum dolor sit amet, ne per perfecto tractatos imperdiet, cu tale epicuri accusata ius. An simul insolens urbanitas duo. Eu iudicabit sententiae est, eam id tota sententiae accommodare. No qui homero consulatu reprimique. Eum in forensibus dissentias.
     </string>
+    <string name="title_activity_education_main">EducationMainActivity</string>
 </resources>
